--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#f05f40</color>
+    <color name="colorPrimaryDark">#fd4700</color>
+    <color name="colorAccent">#1fb7a6</color>
+    <color name="colorBackground">#2c3e50</color>
 </resources>
