Changed image on login page and made the activity fullscreen

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,4 +53,4 @@
         android:background="@color/colorAccent"
         android:text="Login"
         android:textColor="@android:color/background_light" />
-</>
+</RelativeLayout>
