--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -36,16 +36,20 @@
             android:paddingStart="16dp">
 
             <TextView
+                android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Name"
+                android:text="Your name comes here"
+                android:textColor="@android:color/background_light"
                 android:textSize="20sp" />
 
             <TextView
+                android:id="@+id/rank"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="end"
-                android:text="Rank#"
+                android:text="Rank : NA"
+                android:textColor="@android:color/background_light"
                 android:textSize="20sp" />
         </LinearLayout>
 
