--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -42,8 +42,8 @@
                     android:paddingRight="20dp"
                     android:paddingTop="20dp"
                     app:gaugeEndValue="100"
-                    app:gaugePointEndColor="#eb825a"
-                    app:gaugePointStartColor="#eb825a"
+                    app:gaugePointEndColor="@color/colorAccent"
+                    app:gaugePointStartColor="@color/colorAccent"
                     app:gaugeStartAngle="135"
                     app:gaugeStartValue="0"
                     app:gaugeStrokeCap="ROUND"
