--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -16,51 +16,122 @@
             android:paddingStart="8dp"
             android:paddingTop="16dp" >
 
-            <android.support.v7.widget.CardView
-                android:id="@+id/myCard"
-                android:layout_width="200dp"
-                android:layout_height="match_parent"
-                android:layout_gravity="center_horizontal">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal|top"
-                    android:layout_margin="5dp"
-                    android:text="Total Progress"
-                    android:textSize="24sp" />
+                <android.support.v7.widget.CardView
+                    android:id="@+id/myCard"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_marginEnd="4dp"
+                    android:layout_weight="1">
 
-                <pl.pawelkleczkowski.customgauge.CustomGauge
-                    android:id="@+id/gauge1"
-                    android:layout_width="150dp"
-                    android:layout_height="150dp"
-                    android:layout_centerHorizontal="true"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="20dp"
-                    android:paddingBottom="20dp"
-                    android:paddingLeft="20dp"
-                    android:paddingRight="20dp"
-                    android:paddingTop="20dp"
-                    app:gaugeEndValue="100"
-                    app:gaugePointEndColor="@color/colorAccent"
-                    app:gaugePointStartColor="@color/colorAccent"
-                    app:gaugeStartAngle="135"
-                    app:gaugeStartValue="0"
-                    app:gaugeStrokeCap="ROUND"
-                    app:gaugeStrokeColor="@android:color/darker_gray"
-                    app:gaugeStrokeWidth="10dp"
-                    app:gaugeSweepAngle="270" />
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_horizontal|top"
+                        android:layout_margin="5dp"
+                        android:text="Total Progress"
+                        android:textSize="16sp" />
 
-                <TextView
-                    android:id="@+id/totalpercentage"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginTop="20dp"
-                    android:text="Not available"
-                    android:textSize="18sp" />
+                    <pl.pawelkleczkowski.customgauge.CustomGauge
+                        android:id="@+id/gauge1"
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:layout_centerHorizontal="true"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="12dp"
+                        android:paddingBottom="10dp"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp"
+                        android:paddingTop="10dp"
+                        app:gaugeEndValue="100"
+                        app:gaugePointEndColor="@color/colorPrimary"
+                        app:gaugePointStartColor="@color/colorPrimary"
+                        app:gaugeStartAngle="135"
+                        app:gaugeStartValue="0"
+                        app:gaugeStrokeCap="ROUND"
+                        app:gaugeStrokeColor="@android:color/darker_gray"
+                        app:gaugeStrokeWidth="5dp"
+                        app:gaugeSweepAngle="270" />
 
-            </android.support.v7.widget.CardView>
+                    <TextView
+                        android:id="@+id/totalpercentage"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="8dp"
+                        android:text="Not available"
+                        android:textSize="12sp" />
+
+                </android.support.v7.widget.CardView>
+
+                <android.support.v7.widget.CardView
+                    android:id="@+id/myProfile"
+                    android:layout_width="120dp"
+                    android:layout_height="120dp"
+                    android:layout_marginStart="4dp"
+                    android:layout_weight="1">
+
+                    <RelativeLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:padding="8dp">
+
+                        <TextView
+                            android:id="@+id/name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerHorizontal="true"
+                            android:gravity="center"
+                            android:text="Name"
+                            android:textSize="16sp" />
+
+                        <TextView
+                            android:id="@+id/tcapid"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/name"
+                            android:layout_marginTop="8dp"
+                            android:text="TCAP ID : NA" />
+
+                        <TextView
+                            android:id="@+id/points"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/rank"
+                            android:layout_marginTop="4dp"
+                            android:text="Points : NA" />
+
+                        <TextView
+                            android:id="@+id/rank"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@+id/tcapid"
+                            android:layout_marginTop="4dp"
+                            android:text="Rank : NA" />
+
+                        <RelativeLayout
+                            android:id="@+id/edit"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_alignParentBottom="true"
+                            android:layout_alignParentEnd="true"
+                            android:padding="5dp">
+
+                            <ImageView
+                                android:layout_width="20dp"
+                                android:layout_height="20dp"
+                                app:srcCompat="@android:drawable/ic_menu_edit" />
+
+                        </RelativeLayout>
+
+                    </RelativeLayout>
+
+                </android.support.v7.widget.CardView>
+
+            </LinearLayout>
 
             <LinearLayout
                 android:id="@+id/data"
@@ -73,13 +144,4 @@
 
         </LinearLayout>
     </ScrollView>
-    <!--android.support.design.widget.FloatingActionButton
-        android:id="@+id/sync"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_margin="@dimen/fab_margin"
-        app:elevation="16dp"
-        app:srcCompat="@android:drawable/ic_popup_sync" /-->
 </RelativeLayout>
