--- a/app/src/main/res/layout/fragment_tasks.xml
+++ b/app/src/main/res/layout/fragment_tasks.xml
@@ -13,8 +13,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:paddingEnd="8dp"
-            android:paddingStart="8dp"
-            android:paddingTop="16dp" >
+            android:paddingStart="8dp">
 
             <LinearLayout
                 android:id="@+id/data"
