Editing profile completed.

--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -13,6 +13,11 @@
         android:title="Leaderboard"
         app:showAsAction="never" />
     <item
+        android:id="@+id/profile"
+        android:orderInCategory="100"
+        android:title="Profile"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/aboutte"
         android:orderInCategory="100"
         android:title="About Us"
