--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -26,6 +26,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="32dp"
+                android:layout_marginTop="16dp"
                 android:ems="12"
                 android:gravity="center_horizontal"
                 android:hint="Name"
@@ -79,7 +80,7 @@
                 android:layout_marginBottom="32dp"
                 android:ems="12"
                 android:gravity="center_horizontal"
-                android:hint="Date of Birth"
+                android:hint="Date of Birth(DDMMYYYY)"
                 android:inputType="textPersonName"
                 android:textSize="18sp" />
 
@@ -93,6 +94,15 @@
                 android:hint="Address"
                 android:inputType="textPersonName"
                 android:textSize="18sp" />
+
+            <Button
+                android:id="@+id/update"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="32dp"
+                android:background="@color/colorBackground"
+                android:text="Update"
+                android:textColor="@color/cardview_light_background" />
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
