--- a/app/src/main/res/menu/menu_home.xml
+++ b/app/src/main/res/menu/menu_home.xml
@@ -13,14 +13,9 @@
         android:title="Leaderboard"
         app:showAsAction="never" />
     <item
-        android:id="@+id/guidelines"
-        android:orderInCategory="100"
-        android:title="Guidelines"
-        app:showAsAction="never" />
-    <item
         android:id="@+id/aboutte"
         android:orderInCategory="100"
-        android:title="About Us"
+        android:title="About TechEagle"
         app:showAsAction="never" />
     <item
         android:id="@+id/aboutapp"
