--- a/app/src/main/res/layout/activity_about_te.xml
+++ b/app/src/main/res/layout/activity_about_te.xml
@@ -5,18 +5,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    android:paddingBottom="32dp"
-    android:paddingEnd="32dp"
-    android:paddingStart="32dp"
+    android:padding="32dp"
     tools:context="techeagle.in.tcap.AboutTEActivity">
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
+
         android:id="@+id/imageView"
-        android:layout_width="250dp"
-        android:layout_height="wrap_content"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        app:srcCompat="@drawable/logo" />
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/logogrey" />
 
     <ScrollView
         android:layout_width="wrap_content"
@@ -31,16 +31,22 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:paddingStart="24dp">
 
-            <TextView
+            <me.biubiubiu.justifytext.library.JustifyTextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/about_te" />
+
+            <!--<TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:paddingEnd="16dp"
                 android:paddingStart="16dp"
                 android:text="@string/about_te"
-                android:textSize="18sp" />
+                android:textSize="18sp" />-->
         </LinearLayout>
     </ScrollView>
 </RelativeLayout>
