--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#f05f40</color>
-    <color name="colorPrimaryDark">#fd4700</color>
+    <color name="colorPrimary">#fd4700</color>
+    <color name="colorPrimaryDark">#FF3800</color>
     <color name="colorPrimaryLight">#ff916c</color>
     <color name="colorAccent">#1fb7a6</color>
-    <color name="colorBackground">#2c3e50</color>
+    <color name="colorBackground">#083240</color>
     <color name="colorSecondary">#FFC107</color>
     <color name="colorRed">#ff0000</color>
     <color name="googleplusbackground">#de5347</color>
