--- a/app/src/main/res/layout/activity_about_app.xml
+++ b/app/src/main/res/layout/activity_about_app.xml
@@ -4,17 +4,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
-    android:padding="32dp"
+    android:paddingLeft="32dp"
+    android:paddingRight="32dp"
     tools:context="techeagle.in.tcap.AboutAppActivity">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_marginTop="32dp"
         android:background="@color/cardview_light_background"
         android:gravity="center"
         android:padding="32dp"
         android:text="@string/about_app"
         android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/redirect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/textView"
+        android:background="@color/cardview_light_background"
+        android:gravity="center_horizontal"
+        android:paddingBottom="16dp"
+        android:paddingEnd="16dp"
+        android:paddingStart="16dp"
+        android:text="Click here to watch a video to better understand how TCAP works."
+        android:textColor="@color/colorAccent" />
 </RelativeLayout>
