--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -116,7 +116,7 @@
                         app:gaugeStartAngle="135"
                         app:gaugeStartValue="0"
                         app:gaugeStrokeCap="ROUND"
-                        app:gaugeStrokeColor="@android:color/darker_gray"
+                        app:gaugeStrokeColor="@color/cardview_light_background"
                         app:gaugeStrokeWidth="5dp"
                         app:gaugeSweepAngle="270" />
 
